--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "scripts": {
     "dev": "webpack serve --open --config webpack.dev.js",
     "build": "webpack --config webpack.prod.js",
-    "test" : "jest"
+    "test": "jest"
   },
   "dependencies": {
     "accepts": "^1.3.8",
@@ -283,8 +283,11 @@
   "devDependencies": {
     "@babel/core": "^7.27.7",
     "@babel/preset-env": "^7.27.2",
+    "@eslint/js": "^9.30.1",
     "babel-jest": "^30.0.2",
     "css-loader": "^7.1.2",
+    "eslint": "^9.30.1",
+    "globals": "^16.3.0",
     "html-loader": "^5.1.0",
     "html-webpack-plugin": "^5.6.3",
     "jest": "^30.0.3",
